--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8b576511",
+   "id": "a65ab86e",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,7 +10,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "866da40b",
+   "id": "ae1a2017",
+   "metadata": {},
+   "source": [
+    "# GPU\n",
+    "\n",
+    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "\n",
+    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "\n",
+    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33365d65",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -35,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76455a43",
+   "id": "46632c1d",
    "metadata": {},
    "source": [
     "### References\n",
@@ -50,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa50b18b",
+   "id": "94c93825",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -61,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "febde16d",
+   "id": "d91f5320",
    "metadata": {
     "hide-output": false
    },
@@ -75,31 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a6b2bcb",
-   "metadata": {},
-   "source": [
-    "Let’s check the backend used by JAX and the devices available."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57e091ff",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "# Check if JAX is using GPU\n",
-    "print(f\"JAX backend: {jax.devices()[0].platform}\")\n",
-    "\n",
-    "# Check the devices available for JAX\n",
-    "print(jax.devices())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1647c659",
+   "id": "6d940d80",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -108,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "430e65ea",
+   "id": "c70bef74",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71381378",
+   "id": "a7a50660",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -128,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96110ace",
+   "id": "33e825c8",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60187700",
+   "id": "a501aa4e",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -204,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9498b1a",
+   "id": "cd9a0c70",
    "metadata": {
     "hide-output": false
    },
@@ -240,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a340c519",
+   "id": "bf091255",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -288,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ee43b4",
+   "id": "409e7869",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -300,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bed982a",
+   "id": "ff3465bb",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e630964",
+   "id": "e23bb012",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb517ae1",
+   "id": "f682738b",
    "metadata": {},
    "source": [
     "This is the vectorized version of the right-hand side of the Bellman equation\n",
@@ -368,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "842281bf",
+   "id": "e346b81d",
    "metadata": {
     "hide-output": false
    },
@@ -399,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54635265",
+   "id": "a30780a9",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -408,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90e68cd1",
+   "id": "d7dce738",
    "metadata": {
     "hide-output": false
    },
@@ -423,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d48e9502",
+   "id": "8fc4dec0",
    "metadata": {},
    "source": [
     "We need to know rewards at a given policy for policy iteration.\n",
@@ -441,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6520884e",
+   "id": "f4cb64d2",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "509ddd78",
+   "id": "5fe57b39",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -494,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "781dc53f",
+   "id": "64bace02",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65ada784",
+   "id": "125eb0ce",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -532,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bf8cf58",
+   "id": "b95445ef",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "104a46c9",
+   "id": "1baef524",
    "metadata": {},
    "source": [
     "The following function is used for optimistic policy iteration."
@@ -562,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8803c8",
+   "id": "af18539e",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3ac8d67",
+   "id": "cb3f27f1",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -608,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48874647",
+   "id": "f39cca49",
    "metadata": {
     "hide-output": false
    },
@@ -636,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f223473f",
+   "id": "50950dd6",
    "metadata": {},
    "source": [
     "We can also solve the problem using optimistic policy iteration."
@@ -645,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04198e6b",
+   "id": "b02a904a",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ef7631c",
+   "id": "861f54df",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -678,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebdb08b5",
+   "id": "a0890a5f",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a42fb3c6",
+   "id": "fbb96173",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4861ce44",
+   "id": "6a587504",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d45ecaca",
+   "id": "ae2d4fd8",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -731,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d4fed71",
+   "id": "a14a479f",
    "metadata": {
     "hide-output": false
    },
@@ -754,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f070751b",
+   "id": "c4eed69e",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -773,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2075cfe",
+   "id": "d9bf26ca",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c0052a6",
+   "id": "38ec8278",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -821,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d939a1e",
+   "id": "2c01b65a",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e348d6",
+   "id": "74079e73",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -844,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0554d906",
+   "id": "5f3cb398",
    "metadata": {
     "hide-output": false
    },
@@ -855,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bc7cd50",
+   "id": "44ebabd4",
    "metadata": {},
    "source": [
     "Now we are ready to compute capital supply by households given wages and interest rates."
@@ -864,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "935c0efa",
+   "id": "793837df",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32c64316",
+   "id": "cccedff4",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -925,7 +915,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c83ca65e",
+   "id": "e05b6095",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -940,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9456e072",
+   "id": "7ada4456",
    "metadata": {
     "hide-output": false
    },
@@ -958,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75b464d4",
+   "id": "e46bb494",
    "metadata": {
     "hide-output": false
    },
@@ -977,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3235ada",
+   "id": "1a292437",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05971938",
+   "id": "0b67dda2",
    "metadata": {},
    "source": [
     "Here’s a plot of the excess demand function.\n",
@@ -1009,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7c6d652",
+   "id": "b3d287db",
    "metadata": {
     "hide-output": false
    },
@@ -1025,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96fa5eec",
+   "id": "49c0a439",
    "metadata": {
     "hide-output": false
    },
@@ -1041,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112c10ce",
+   "id": "365556e9",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8498afd",
+   "id": "af094808",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1071,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbef67f5",
+   "id": "644faf6e",
    "metadata": {
     "hide-output": false
    },
@@ -1098,7 +1088,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "783ee44d",
+   "id": "53241080",
    "metadata": {},
    "source": [
     "Now we call the bisection function on excess demand."
@@ -1107,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd67e221",
+   "id": "ed8a736f",
    "metadata": {
     "hide-output": false
    },
@@ -1121,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d34f8dc9",
+   "id": "b5706ba6",
    "metadata": {
     "hide-output": false
    },
@@ -1136,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76135b79",
+   "id": "9f86279f",
    "metadata": {},
    "source": [
     "Notice how quickly we can compute the equilibrium capital stock using a simple\n",
@@ -1145,7 +1135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc20e93e",
+   "id": "73d7ad11",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1153,7 +1143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d03b1b2e",
+   "id": "5c9aedd5",
    "metadata": {},
    "source": [
     "## Exercise 11.1\n",
@@ -1164,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6058ed2",
+   "id": "dd01c211",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 11.1](https://jax.quantecon.org/#aygr_ex1)"
@@ -1173,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a7a6e2c",
+   "id": "607eefe2",
    "metadata": {
     "hide-output": false
    },
@@ -1191,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9efbbdc",
+   "id": "7f145f6f",
    "metadata": {
     "hide-output": false
    },
@@ -1206,7 +1196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb68d58c",
+   "id": "6419a170",
    "metadata": {},
    "source": [
     "## Exercise 11.2\n",
@@ -1229,7 +1219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a30b35ce",
+   "id": "dec0e409",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 11.2](https://jax.quantecon.org/#aygr_ex2)\n",
@@ -1240,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "743f0066",
+   "id": "b4c6904b",
    "metadata": {
     "hide-output": false
    },
@@ -1253,7 +1243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9f146f3",
+   "id": "f5799e7b",
    "metadata": {},
    "source": [
     "We need to re-compile all the jitted functions in order notice the change\n",
@@ -1263,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d100b9e2",
+   "id": "470422ed",
    "metadata": {
     "hide-output": false
    },
@@ -1281,7 +1271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0cb0d4b",
+   "id": "5c06710c",
    "metadata": {},
    "source": [
     "Now, let’s plot the the demand for capital by firms"
@@ -1290,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8ce72a0",
+   "id": "1b0e0db7",
    "metadata": {
     "hide-output": false
    },
@@ -1316,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0178f9a7",
+   "id": "a8a063d3",
    "metadata": {
     "hide-output": false
    },
@@ -1337,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb75c6b6",
+   "id": "1fb225d6",
    "metadata": {},
    "source": [
     "Compute the equilibrium"
@@ -1346,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "047c5984",
+   "id": "d7b42636",
    "metadata": {
     "hide-output": false
    },
@@ -1361,7 +1351,7 @@
   }
  ],
  "metadata": {
-  "date": 1683534858.926567,
+  "date": 1683608798.1830206,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
