--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e03c9557",
+   "id": "bf733a37",
    "metadata": {},
    "source": [
-    "# Default Risk and Income Fluctuations\n",
+    "# Default Risk and Income Fluctuations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "712c9b43",
+   "metadata": {},
+   "source": [
+    "# GPU\n",
+    "\n",
+    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "\n",
+    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "\n",
+    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`\n",
     "\n",
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
    ]
@@ -13,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "331be430",
+   "id": "0469abfa",
    "metadata": {
     "hide-output": false
    },
@@ -24,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a3df702",
+   "id": "192a0a49",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -75,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cb3df1e",
+   "id": "adf8141b",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30eed259",
+   "id": "2d4176ca",
    "metadata": {
     "hide-output": false
    },
@@ -103,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03e36256",
+   "id": "7695fccb",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -113,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db5c122",
+   "id": "cdcfba18",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -155,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1218bb9",
+   "id": "d1a190c9",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -197,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc45a6f1",
+   "id": "963c6f71",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -229,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e045890b",
+   "id": "54ec6e6b",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -259,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3e04c38",
+   "id": "6bb20859",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -270,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7f5969f",
+   "id": "d46e03ad",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -366,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "063f3698",
+   "id": "454c245d",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -391,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af77f88d",
+   "id": "9bc46992",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -437,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47931e2f",
+   "id": "8d1e76a9",
    "metadata": {
     "hide-output": false
    },
@@ -490,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37babd05",
+   "id": "341f7714",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -499,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61da0cb6",
+   "id": "8e7a3bd7",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd1d374b",
+   "id": "5eddb97a",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -522,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f192f98",
+   "id": "9bc6a187",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "046ba0e3",
+   "id": "e1065a54",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -566,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eb0c47c",
+   "id": "a6c59d3f",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6e67ad1",
+   "id": "0d4434a5",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c09882f",
+   "id": "d360213c",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ac65f48",
+   "id": "bcf2d3f6",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc2fb051",
+   "id": "226e7a05",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the arrays declared as static (compile-time constants) in order to help the compiler."
@@ -674,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ec122c0",
+   "id": "2cb0e24f",
    "metadata": {
     "hide-output": false
    },
@@ -689,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c999cec",
+   "id": "6d894d0d",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -698,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ed70a17",
+   "id": "f10c9d99",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1afb1187",
+   "id": "df4eee4f",
    "metadata": {},
    "source": [
     "We can now write a function that will use the `Arellano_Economy` class and the\n",
@@ -729,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa3ee91",
+   "id": "b4a0eece",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6c96a73",
+   "id": "1004b777",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -778,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab771cd5",
+   "id": "c79d83b2",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d66d818",
+   "id": "e0c602a2",
    "metadata": {
     "hide-output": false
    },
@@ -802,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d24a0b9",
+   "id": "a5939a70",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +828,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc0e291",
+   "id": "6f395a06",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -824,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41fda93b",
+   "id": "2f8fd211",
    "metadata": {
     "hide-output": false
    },
@@ -896,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc96e05d",
+   "id": "8a796a5d",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -969,7 +983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fcabfc4",
+   "id": "c1d1b481",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -977,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f15c2de9",
+   "id": "745541de",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -990,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df8f30ba",
+   "id": "9389c685",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1001,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffa33276",
+   "id": "9736342d",
    "metadata": {
     "hide-output": false
    },
@@ -1013,7 +1027,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fecc47f1",
+   "id": "7ae8bf06",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of Arellano (2008)"
@@ -1022,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb747ad2",
+   "id": "405654ba",
    "metadata": {
     "hide-output": false
    },
@@ -1058,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b62e988",
+   "id": "9dd803b4",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1067,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d014bc82",
+   "id": "279bce44",
    "metadata": {
     "hide-output": false
    },
@@ -1087,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa3af7b2",
+   "id": "c780c105",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1096,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8b7122f",
+   "id": "28eb17a2",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37580666",
+   "id": "0490a7a9",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1132,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dec091d6",
+   "id": "b6cc1b84",
    "metadata": {
     "hide-output": false
    },
@@ -1151,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e24cf0c1",
+   "id": "b389bf8b",
    "metadata": {
     "hide-output": false
    },
@@ -1196,7 +1210,7 @@
   }
  ],
  "metadata": {
-  "date": 1683534858.989327,
+  "date": 1683608798.2460186,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
