--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4b93b434",
+   "id": "257f6b14",
    "metadata": {},
    "source": [
     "# Quantitative Economics with Python (JAX)\n",
@@ -11,24 +11,24 @@
     "[Thomas J. Sargent](http://www.tomsargent.com/) and [John Stachurski](https://johnstachurski.net/)\n",
     "specifically using [JAX](https://jax.readthedocs.io) and accelerating using the `GPU`.\n",
     "\n",
-    "For an overview of the series, see [this page](https://quantecon.org/python-lectures/)"
+    "For an overview of the series, see [this page](https://quantecon.org/projects/#filter=lecture)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7b77a275",
+   "id": "a3193b9f",
    "metadata": {},
    "source": [
     "# Introduction\n",
     "\n",
-    "- [About these Lectures](https://jax.quantecon.org/about.html)\n",
-    "- [JAX](https://jax.quantecon.org/jax_intro.html)\n",
+    "- [About](https://jax.quantecon.org/about.html)\n",
+    "- [An Introduction to JAX](https://jax.quantecon.org/jax_intro.html)\n",
     "- [Newton’s Method via JAX](https://jax.quantecon.org/newtons_method.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "94bbf1e1",
+   "id": "c1b368c3",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c321fcd2",
+   "id": "38444c9c",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e75ce250",
+   "id": "35bf1ad5",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -66,7 +66,7 @@
   }
  ],
  "metadata": {
-  "date": 1683534859.0042396,
+  "date": 1683608798.2610154,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
