--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7f652637",
+   "id": "51122355",
    "metadata": {},
    "source": [
-    "# Inventory Dynamics\n",
+    "# Inventory Dynamics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a2af5c0",
+   "metadata": {},
+   "source": [
+    "# GPU\n",
+    "\n",
+    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "\n",
+    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "\n",
+    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`\n",
     "\n",
     "\n",
     "<a id='index-0'></a>"
@@ -13,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83e351c1",
+   "id": "efe117f7",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -27,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2978136b",
+   "id": "4aa7625d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -40,15 +54,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c3594a7",
+   "id": "2fb90c9d",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.rcParams[\"figure.figsize\"] = (11, 5)  #set default figure size\n",
     "import numpy as np\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
@@ -58,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc002823",
+   "id": "531e15ae",
    "metadata": {},
    "source": [
     "Let’s check the backend used by JAX and the devices available"
@@ -67,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "068e4fb4",
+   "id": "d499eb3e",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50ed592e",
+   "id": "676985e8",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -121,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d02b5ba9",
+   "id": "dcaa34ff",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4066e7b7",
+   "id": "3172a64b",
    "metadata": {},
    "source": [
     "## Example 1: marginal distributions\n",
@@ -154,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "824ae0e3",
+   "id": "c511ddbc",
    "metadata": {
     "hide-output": false
    },
@@ -195,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2776577",
+   "id": "7ebb6601",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -219,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a090de48",
+   "id": "d90db05d",
    "metadata": {
     "hide-output": false
    },
@@ -258,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e7ad588",
+   "id": "4e5e6d27",
    "metadata": {
     "hide-output": false
    },
@@ -285,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21780a23",
+   "id": "056b72cb",
    "metadata": {},
    "source": [
     "Note that we did not JIT-compile the outer loop, since\n",
@@ -296,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5306140",
+   "id": "3e1cb398",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -309,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46962af5",
+   "id": "43a9470c",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93a297b1",
+   "id": "f8eefda1",
    "metadata": {},
    "source": [
     "The benefit of the `lax.scan` implementation is that we compile the whole\n",
@@ -360,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "269f8ed5",
+   "id": "f3449d5b",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8d18c75",
+   "id": "21be25eb",
    "metadata": {},
    "source": [
     "Notice that by $ t=500 $ or $ t=750 $ the densities are barely\n",
@@ -399,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85a0d091",
+   "id": "b7de758e",
    "metadata": {
     "hide-output": false
    },
@@ -422,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "467d2329",
+   "id": "7a970c57",
    "metadata": {},
    "source": [
     "## Example 2: restock frequency\n",
@@ -442,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c50b90e",
+   "id": "88b5c541",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49a26ebd",
+   "id": "b4242c4d",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44a90ade",
+   "id": "b89d3f62",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -508,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cf00375",
+   "id": "b32dd4a5",
    "metadata": {
     "hide-output": false
    },
@@ -555,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a933b69",
+   "id": "598d703a",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -564,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "928ed4e8",
+   "id": "138c2f91",
    "metadata": {
     "hide-output": false
    },
@@ -576,7 +588,7 @@
   }
  ],
  "metadata": {
-  "date": 1683534859.0281408,
+  "date": 1683608798.4149451,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
