--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b1b412e8",
+   "id": "ce0f18a5",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9b22754",
+   "id": "950f6c9d",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -25,16 +25,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26075fe3",
+   "id": "4b372fd5",
    "metadata": {},
    "source": [
+    "# GPU\n",
+    "\n",
+    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "\n",
+    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "\n",
+    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`\n",
+    "\n",
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4538efc9",
+   "id": "587066c6",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "828a635a",
+   "id": "dbb3c8ea",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -67,15 +75,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9e441d2",
+   "id": "fee3a1ac",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.rcParams[\"figure.figsize\"] = (11, 5)  #set default figure size\n",
     "import quantecon as qe\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
@@ -84,31 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed8b8d9",
-   "metadata": {},
-   "source": [
-    "Let’s check the backend used by JAX and the devices available"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "010151d2",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "# Check if JAX is using GPU\n",
-    "print(f\"JAX backend: {jax.devices()[0].platform}\")\n",
-    "\n",
-    "# Check the devices available for JAX\n",
-    "print(jax.devices())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c0df6167",
+   "id": "7eddad77",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -139,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcb778c6",
+   "id": "94b98ccd",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -149,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19f079da",
+   "id": "0630fe5a",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -190,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d233b417",
+   "id": "b9e94f0d",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -247,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20324e59",
+   "id": "8ba46d81",
    "metadata": {
     "hide-output": false
    },
@@ -268,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdc7c677",
+   "id": "6315d26a",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -281,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "627930f7",
+   "id": "fccdbd69",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23418e86",
+   "id": "274f410c",
    "metadata": {},
    "source": [
     "Notice that we do not JIT-compile the `for` loops, since\n",
@@ -339,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c3dbe00",
+   "id": "1020cf2b",
    "metadata": {
     "hide-output": false
    },
@@ -357,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecc115c4",
+   "id": "b9d49367",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -365,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a52a68c2",
+   "id": "df87e5f9",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.scan`\n",
@@ -390,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccf1b33a",
+   "id": "16e26ad5",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "807e9731",
+   "id": "62b25c0b",
    "metadata": {},
    "source": [
     "In this case, `M` is small enough for the code to run and\n",
@@ -447,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b17d7b6",
+   "id": "4f0365b4",
    "metadata": {
     "hide-output": false
    },
@@ -458,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82596d83",
+   "id": "88bbcc3d",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -467,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78078005",
+   "id": "bfb2f58b",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a09c040",
+   "id": "77a20ee6",
    "metadata": {},
    "source": [
     "Let’s rerun the `for` loop version on smaller `M` to compare the speed"
@@ -494,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c30fb4d2",
+   "id": "c0b86a1d",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29a8e89a",
+   "id": "e5bc86e8",
    "metadata": {},
    "source": [
     "We see that the `lax.scan` version is faster than the `for` loop version\n",
@@ -514,7 +496,7 @@
   }
  ],
  "metadata": {
-  "date": 1683534859.25612,
+  "date": 1683608798.511543,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
