--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9de184b8",
+   "id": "8376b5ff",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,14 +10,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2319670d",
+   "id": "6e6544a7",
+   "metadata": {},
+   "source": [
+    "# GPU\n",
+    "\n",
+    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "\n",
+    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "\n",
+    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "502a33c8",
    "metadata": {},
    "source": [
     "## Overview\n",
     "\n",
-    "Continuing from the [Newton’s Method lecture](https://python.quantecon.org/newton_method.html), we are going to solve the multidimensional problem with `JAX`.\n",
+    "In this lecture we highlight some of the capabilities of JAX, including JIT\n",
+    "compilation and automatic differentiation.\n",
     "\n",
-    "More information about JAX can be found [here](https://python-programming.quantecon.org/jax_intro.html).\n",
+    "The application is computing equilibria via Newton’s method, which we discussed\n",
+    "in [a more elementary QuantEcon lecture](https://python.quantecon.org/newton_method.html)\n",
+    "\n",
+    "Here our focus is on how to apply JAX to this problem.\n",
     "\n",
     "We use the following imports in this lecture"
    ]
@@ -25,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "534676c6",
+   "id": "6646b2bf",
    "metadata": {
     "hide-output": false
    },
@@ -38,38 +56,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ac9274",
+   "id": "68a821e0",
    "metadata": {},
    "source": [
-    "Let’s check the backend used by JAX and the devices available."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48804282",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "# Check if JAX is using GPU\n",
-    "print(f\"JAX backend: {jax.devices()[0].platform}\")\n",
+    "## The Equilibrium Problem\n",
     "\n",
-    "# Check the devices available for JAX\n",
-    "print(jax.devices())"
+    "In this section we describe the market equilibrium problem we will solve with\n",
+    "JAX.\n",
+    "\n",
+    "We begin with a two good case,\n",
+    "which is borrowed from [an earlier lecture](https://python.quantecon.org/newton_method.html).\n",
+    "\n",
+    "Then we shift to higher dimensions."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13cbb6f6",
+   "id": "120115b4",
    "metadata": {},
    "source": [
-    "## The Two Goods Market Equilibrium\n",
+    "### The Two Goods Market Equilibrium\n",
     "\n",
-    "Let’s have a quick recap of this problem – a more detailed explanation and derivation can be found at [A Two Goods Market Equilibrium](https://python.quantecon.org/newton_method.html#two-goods-market).\n",
-    "\n",
-    "Assume we have a market for two complementary goods where demand depends on the price of both components.\n",
+    "Assume we have a market for two complementary goods where demand depends on the\n",
+    "price of both components.\n",
     "\n",
     "We label them good 0 and good 1, with price vector $ p = (p_0, p_1) $.\n",
     "\n",
@@ -119,12 +128,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce0b6be7",
+   "id": "b17ab693",
    "metadata": {},
    "source": [
-    "### The Multivariable Market Equilibrium\n",
+    "### A High-Dimensional Version\n",
     "\n",
-    "We can now easily get the multivariable version of the problem above.\n",
+    "Let’s now shift to a linear algebra formulation, which alllows us to handle\n",
+    "arbitrarily many goods.\n",
     "\n",
     "The supply function remains unchanged,\n",
     "\n",
@@ -132,13 +142,13 @@
     "q^s (p) =b \\sqrt{p}\n",
     "$$\n",
     "\n",
-    "The demand function is,\n",
+    "The demand function becomes\n",
     "\n",
     "$$\n",
     "q^d (p) = \\text{exp}(- A \\cdot p) + c\n",
     "$$\n",
     "\n",
-    "Our new excess demand function is,\n",
+    "Our new excess demand function is\n",
     "\n",
     "$$\n",
     "e(p) = \\text{exp}(- A \\cdot p) + c - b \\sqrt{p}\n",
@@ -150,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cc404ee",
+   "id": "5c429307",
    "metadata": {
     "hide-output": false
    },
@@ -162,12 +172,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40eaf1f7",
+   "id": "ebd60b40",
    "metadata": {},
    "source": [
-    "## Using Newton’s Method\n",
+    "## Computation\n",
     "\n",
-    "Now let’s use the multivariate version of Newton’s method to compute the equilibrium price\n",
+    "In this section we describe and then implement the solution method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1199f98",
+   "metadata": {},
+   "source": [
+    "### Newton’s Method\n",
+    "\n",
+    "We use a multivariate version of Newton’s method to compute the equilibrium price.\n",
+    "\n",
+    "The rule for updating a guess $ p_n $ of the price vector is\n",
     "\n",
     "\n",
     "<a id='equation-multi-newton'></a>\n",
@@ -177,17 +199,15 @@
     "\n",
     "Here $ J_e(p_n) $ is the Jacobian of $ e $ evaluated at $ p_n $.\n",
     "\n",
-    "The iteration starts from some initial guess of the price vector $ p_0 $.\n",
+    "Iteration starts from initial guess $ p_0 $.\n",
     "\n",
-    "Here, instead of coding Jacobian by hand, We use the `jax.jacobian()` function to auto-differentiate and calculate the Jacobian.\n",
-    "\n",
-    "With only slight modification, we can generalize [our previous attempt](https://python.quantecon.org/newton_method.html#first-newton-attempt) to multi-dimensional problems"
+    "Instead of coding the Jacobian by hand, we use `jax.jacobian()`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29581a63",
+   "id": "5ff827e8",
    "metadata": {
     "hide-output": false
    },
@@ -215,12 +235,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e90b85a",
+   "id": "7ef71863",
    "metadata": {},
    "source": [
-    "### A High-Dimensional Problem\n",
+    "### Application\n",
     "\n",
-    "We now apply the multivariate Newton’s Method to  investigate a large market with 5,000 goods.\n",
+    "Let’s now apply the method just described to investigate a large market with 5,000 goods.\n",
     "\n",
     "We randomly generate the matrix $ A $ and set the parameter vectors $ b \\text{ and } c $ to $ 1 $."
    ]
@@ -228,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "610965e0",
+   "id": "87b75085",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29fbb751",
+   "id": "dcba3ec8",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -261,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1ff350c",
+   "id": "17f9c333",
    "metadata": {
     "hide-output": false
    },
@@ -272,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c34e197b",
+   "id": "bb8775dc",
    "metadata": {},
    "source": [
     "By leveraging the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -283,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c07ecac9",
+   "id": "260fed50",
    "metadata": {
     "hide-output": false
    },
@@ -297,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8602b986",
+   "id": "b2ae6de2",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd7279e2",
+   "id": "bf819efa",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -318,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff24fdd1",
+   "id": "42179d4f",
    "metadata": {
     "hide-output": false
    },
@@ -336,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61a08765",
+   "id": "aba61ce9",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c45f3e83",
+   "id": "79c907e6",
    "metadata": {},
    "source": [
     "The result is also less accurate."
@@ -356,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef7edb19",
+   "id": "1d739154",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -364,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb7d18a5",
+   "id": "fc68f5b2",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -423,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dff8f85",
+   "id": "613976b2",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -434,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2836b21a",
+   "id": "f977cd54",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44107ecb",
+   "id": "d67cf923",
    "metadata": {},
    "source": [
     "Then define the multivariate version of the formula for the [law of motion of captial](https://python.quantecon.org/newton_method.html#solow)"
@@ -462,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a910be2",
+   "id": "187a70cb",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b78f45b",
+   "id": "afce635d",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -483,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24521878",
+   "id": "af6a83be",
    "metadata": {
     "hide-output": false
    },
@@ -500,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2d795a8",
+   "id": "126ec224",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values given the well-defined property of this question.\n",
@@ -513,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3de670f",
+   "id": "79e1560e",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d99f25ed",
+   "id": "136e938c",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -535,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "522e840d",
+   "id": "75a66a86",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5a78ae7",
+   "id": "2e9374a0",
    "metadata": {},
    "source": [
     "The result is very close to the ground truth but still slightly different.\n",
@@ -565,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38063673",
+   "id": "8330117b",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4da0b11",
+   "id": "d8fac5b3",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -590,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2a31743",
+   "id": "0c2d0dea",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -636,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37c2a2dd",
+   "id": "73b12373",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -647,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed123b33",
+   "id": "69cca4a5",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff38528b",
+   "id": "a422ebb4",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -675,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88c165ca",
+   "id": "246811a9",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87a9254c",
+   "id": "7122eb59",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -707,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34a6e79a",
+   "id": "34304ec4",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "861f1300",
+   "id": "8d0f988d",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -726,7 +746,7 @@
   }
  ],
  "metadata": {
-  "date": 1683534859.29193,
+  "date": 1683608798.550065,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
