--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "20593b39",
+   "id": "51b85f6b",
    "metadata": {},
    "source": [
-    "# Optimal Investment\n",
+    "# Optimal Investment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c80fa2c8",
+   "metadata": {},
+   "source": [
+    "# GPU\n",
+    "\n",
+    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "\n",
+    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "\n",
+    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`\n",
     "\n",
     "We require the following library to be installed."
    ]
@@ -13,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4da00f1a",
+   "id": "853fcc54",
    "metadata": {
     "hide-output": false
    },
@@ -24,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41301b36",
+   "id": "85aca379",
    "metadata": {},
    "source": [
     "A monopolist faces inverse demand\n",
@@ -71,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9370ae6d",
+   "id": "efb761db",
    "metadata": {
     "hide-output": false
    },
@@ -85,31 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beaffdd7",
-   "metadata": {},
-   "source": [
-    "Let’s check the backend used by JAX and the devices available"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7da69190",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "# Check if JAX is using GPU\n",
-    "print(f\"JAX backend: {jax.devices()[0].platform}\")\n",
-    "\n",
-    "# Check the devices available for JAX\n",
-    "print(jax.devices())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9216391c",
+   "id": "1980fcbd",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -118,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2fbf839",
+   "id": "54768dbe",
    "metadata": {
     "hide-output": false
    },
@@ -129,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1045530",
+   "id": "6b524173",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -138,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecbde80a",
+   "id": "0c9e85f1",
    "metadata": {
     "hide-output": false
    },
@@ -169,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c6c3cca",
+   "id": "b0220a20",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -178,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24e650dd",
+   "id": "d2cc2c4d",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f20d5097",
+   "id": "d738bcfc",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -228,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38bdf581",
+   "id": "f2633c98",
    "metadata": {
     "hide-output": false
    },
@@ -265,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b77fa6d",
+   "id": "386f2a26",
    "metadata": {},
    "source": [
     "Define a function to compute the current rewards given policy $ \\sigma $."
@@ -274,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "538c0f8f",
+   "id": "c44e62a6",
    "metadata": {
     "hide-output": false
    },
@@ -306,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca92f9fd",
+   "id": "deb3fb9d",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -315,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53701a78",
+   "id": "d45aebf8",
    "metadata": {
     "hide-output": false
    },
@@ -330,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f40a2c8",
+   "id": "4bce8733",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -339,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f4b07d7",
+   "id": "372d3381",
    "metadata": {
     "hide-output": false
    },
@@ -354,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d393b75b",
+   "id": "2d81e17e",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -363,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1e06c6a",
+   "id": "529c9641",
    "metadata": {
     "hide-output": false
    },
@@ -398,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef63c727",
+   "id": "aa0f72aa",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -449,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2abdf194",
+   "id": "a54f3646",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f01e4d80",
+   "id": "ee0ca913",
    "metadata": {},
    "source": [
     "Define a function to get the value $ v_{\\sigma} $ of policy\n",
@@ -488,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6568adb4",
+   "id": "aa0d685f",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b6b670e",
+   "id": "7a89ec14",
    "metadata": {},
    "source": [
     "Now we define the solvers, which implement VFI, HPI and OPI."
@@ -522,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e898ce3",
+   "id": "11ce5617",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ef28d3b",
+   "id": "8a75366b",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66518f1b",
+   "id": "4c48c17d",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5429072",
+   "id": "53a541d0",
    "metadata": {
     "hide-output": false
    },
@@ -610,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8d7473d",
+   "id": "c702812b",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cbbf0d8",
+   "id": "6aecf90a",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b35bc657",
+   "id": "56f4815e",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -652,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "216c1d46",
+   "id": "824ce086",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c38b2646",
+   "id": "4b99492a",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca5b8e0f",
+   "id": "8f27a07d",
    "metadata": {},
    "source": [
     "Let’s plot the time taken by each of the solvers and compare them."
@@ -695,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db3047a3",
+   "id": "ec4c3540",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1648a919",
+   "id": "9a5d8149",
    "metadata": {
     "hide-output": false
    },
@@ -723,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ffbcc1b",
+   "id": "555c16e1",
    "metadata": {
     "hide-output": false
    },
@@ -740,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "948ac202",
+   "id": "86a8b8ee",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de36d933",
+   "id": "676d9cd2",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +769,7 @@
   }
  ],
  "metadata": {
-  "date": 1683534859.3256438,
+  "date": 1683608798.5843773,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
