--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,12 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "23c0027d",
+   "id": "e0445e65",
    "metadata": {},
    "source": [
-    "# Wealth Distribution Dynamics\n",
+    "# Wealth Distribution Dynamics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "208546dd",
+   "metadata": {},
+   "source": [
+    "# GPU\n",
     "\n",
-    "This lecture is the extended JAX implementation of [this lecture](https://python.quantecon.org/wealth_dynamics.html). Please refer that lecture for all background and notation.\n",
+    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "\n",
+    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "\n",
+    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`\n",
+    "\n",
+    "This lecture is the extended JAX implementation of [this lecture](https://python.quantecon.org/wealth_dynamics.html).\n",
+    "\n",
+    "Please refer that lecture for all background and notation.\n",
     "\n",
     "We will use the following imports."
    ]
@@ -15,47 +31,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcdc5e56",
+   "id": "a1a40a12",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "plt.rcParams[\"figure.figsize\"] = (11, 5)  #set default figure size\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "from collections import namedtuple\n",
-    "%matplotlib inline"
+    "from collections import namedtuple"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "def56271",
+   "id": "c66b80ba",
    "metadata": {},
    "source": [
-    "Let’s check the backend used by JAX and the devices available"
+    "Let’s check the hardware we are running on:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1f4f052",
+   "id": "2082aea2",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "# Check if JAX is using GPU\n",
-    "print(f\"JAX backend: {jax.devices()[0].platform}\")\n",
-    "\n",
-    "# Check the devices available for JAX\n",
-    "print(jax.devices())"
+    "!nvidia-smi"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a78dea2c",
+   "id": "04bd17db",
    "metadata": {},
    "source": [
     "## Lorenz Curves and the Gini Coefficient\n",
@@ -66,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d347dc10",
+   "id": "1ff2e92a",
    "metadata": {},
    "source": [
     "### Lorenz Curves\n",
@@ -79,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce000e5d",
+   "id": "f359208e",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df3b4c68",
+   "id": "cd58a7f2",
    "metadata": {},
    "source": [
     "Let’s suppose that"
@@ -107,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c685e04",
+   "id": "1ef42c07",
    "metadata": {
     "hide-output": false
    },
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "723ea592",
+   "id": "cc1a36f0",
    "metadata": {},
    "source": [
     "is data representing the wealth of 10,000 households.\n",
@@ -131,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af8ab107",
+   "id": "74862c9c",
    "metadata": {
     "hide-output": false
    },
@@ -145,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26a1cb37",
+   "id": "da00655f",
    "metadata": {
     "hide-output": false
    },
@@ -160,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b3fc21c",
+   "id": "7c336311",
    "metadata": {
     "hide-output": false
    },
@@ -175,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a81fac42",
+   "id": "0c6d9241",
    "metadata": {},
    "source": [
     "Here is another example, which shows how the Lorenz curve shifts as the\n",
@@ -189,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c5d33d",
+   "id": "b52326dd",
    "metadata": {
     "hide-output": false
    },
@@ -202,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21d76ccd",
+   "id": "20f3fe45",
    "metadata": {
     "hide-output": false
    },
@@ -223,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39f45d90",
+   "id": "a884b952",
    "metadata": {},
    "source": [
     "You can see that, as the tail parameter of the Pareto distribution increases, inequality decreases.\n",
@@ -233,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a43b7e9e",
+   "id": "ab09e2f8",
    "metadata": {},
    "source": [
     "### The Gini Coefficient\n",
@@ -252,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61a83394",
+   "id": "5c81c000",
    "metadata": {
     "hide-output": false
    },
@@ -274,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e2cacf9",
+   "id": "c9d4c9b2",
    "metadata": {},
    "source": [
     "Let’s see if the Gini coefficient computed from a simulated sample matches\n",
@@ -284,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eff416b",
+   "id": "781d2006",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81c2b939",
+   "id": "68d91bdb",
    "metadata": {
     "hide-output": false
    },
@@ -322,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03d19565",
+   "id": "223de3e1",
    "metadata": {},
    "source": [
     "The simulation shows that the fit is good."
@@ -330,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb07202f",
+   "id": "ac8124ea",
    "metadata": {},
    "source": [
     "## A Model of Wealth Dynamics\n",
@@ -355,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7fd8331",
+   "id": "19214765",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -366,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab0228c8",
+   "id": "9f0f4d6c",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17fdf347",
+   "id": "4e5b8a7d",
    "metadata": {},
    "source": [
     "Here’s a function to create the Model with the given parameters"
@@ -390,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d860bba",
+   "id": "a4be4e44",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ad424f",
+   "id": "4a569e4e",
    "metadata": {},
    "source": [
     "The following function updates one period with the given current wealth and persistent state."
@@ -437,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9817991e",
+   "id": "7839ffc9",
    "metadata": {
     "hide-output": false
    },
@@ -471,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6adf5d3",
+   "id": "d6e978aa",
    "metadata": {},
    "source": [
     "Here’s function to simulate the time series of wealth for individual households using a `for` loop and JAX."
@@ -480,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "466452bb",
+   "id": "23ffafc6",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebb79170",
+   "id": "5da9f82a",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution using the above function."
@@ -533,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "049db13a",
+   "id": "2da719f4",
    "metadata": {
     "hide-output": false
    },
@@ -547,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91334122",
+   "id": "f4f15feb",
    "metadata": {
     "hide-output": false
    },
@@ -561,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbacb43b",
+   "id": "a9edb82c",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -570,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e3f7b6a",
+   "id": "76751186",
    "metadata": {
     "hide-output": false
    },
@@ -586,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c96136f9",
+   "id": "a4e19a50",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b304e883",
+   "id": "0d8efebf",
    "metadata": {},
    "source": [
     "We can further try to optimize and speed up the compile time of the above function by replacing `for` loop with [`jax.lax.scan`](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.scan.html)."
@@ -608,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c03cd36d",
+   "id": "f25c267a",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92c54beb",
+   "id": "565d2553",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution and also observe the difference in time between `wealth_time_series_jax` and `wealth_time_series_for_loop_jax`."
@@ -663,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28853825",
+   "id": "e20fba25",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1db23b21",
+   "id": "c1180449",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71b8bf89",
+   "id": "7e00a6e0",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -699,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc1b6066",
+   "id": "a65c903e",
    "metadata": {
     "hide-output": false
    },
@@ -714,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cbeaf8e",
+   "id": "29c7ae56",
    "metadata": {
     "hide-output": false
    },
@@ -727,7 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4feda713",
+   "id": "d7af44f2",
    "metadata": {},
    "source": [
     "Now here’s function to simulate a cross section of households forward in time."
@@ -736,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fc78824",
+   "id": "1c5e3090",
    "metadata": {
     "hide-output": false
    },
@@ -766,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0dc9da3",
+   "id": "9f2f1bc2",
    "metadata": {},
    "source": [
     "## Applications\n",
@@ -777,7 +787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3068c4d",
+   "id": "038f4337",
    "metadata": {},
    "source": [
     "### Inequality Measures\n",
@@ -791,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48266d36",
+   "id": "183cfd2c",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68fc8613",
+   "id": "ec936f89",
    "metadata": {},
    "source": [
     "Now we investigate how the Lorenz curves associated with the wealth distribution change as return to savings varies.\n",
@@ -825,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7760cecb",
+   "id": "fae383a8",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f8c02c8",
+   "id": "b46e2b6e",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -861,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f89f1c90",
+   "id": "2561be01",
    "metadata": {
     "hide-output": false
    },
@@ -876,7 +886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f24c47b",
+   "id": "7cb32033",
    "metadata": {},
    "source": [
     "Once again, we see that inequality increases as returns on financial income\n",
@@ -889,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cfffa44",
+   "id": "3e5cde8f",
    "metadata": {
     "hide-output": false
    },
@@ -914,7 +924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9898fc75",
+   "id": "617b7235",
    "metadata": {},
    "source": [
     "We see that greater volatility has the effect of increasing inequality in this model."
@@ -922,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa914316",
+   "id": "035ebce0",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -930,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23b8756d",
+   "id": "67a65dc6",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -955,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd31b028",
+   "id": "4fa53042",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -967,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de31c067",
+   "id": "f1c59112",
    "metadata": {
     "hide-output": false
    },
@@ -991,7 +1001,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0573036",
+   "id": "1545d658",
    "metadata": {},
    "source": [
     "In general, for a Pareto distribution, a higher tail index implies less weight\n",
@@ -1004,7 +1014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44a6355e",
+   "id": "348fc8a9",
    "metadata": {},
    "source": [
     "## Exercise 6.2\n",
@@ -1029,7 +1039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b11aff9",
+   "id": "2982f627",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1040,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2713ff7d",
+   "id": "5971f7b3",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "726f8d01",
+   "id": "e297c261",
    "metadata": {},
    "source": [
     "Let’s define a function to get the rank data"
@@ -1066,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "089312a6",
+   "id": "b7bdc3e0",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1092,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41f29e4c",
+   "id": "78847beb",
    "metadata": {},
    "source": [
     "Now let’s see the rank-size plot:"
@@ -1091,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b43a5524",
+   "id": "53fd1085",
    "metadata": {
     "hide-output": false
    },
@@ -1109,7 +1119,7 @@
   }
  ],
  "metadata": {
-  "date": 1683534859.4496026,
+  "date": 1683608798.7137296,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
