--- a/opt_savings.ipynb
+++ b/opt_savings.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3fd5ba1d",
+   "id": "369946b8",
    "metadata": {},
    "source": [
-    "# Optimal Savings\n",
+    "# Optimal Savings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "323643b5",
+   "metadata": {},
+   "source": [
+    "# GPU\n",
+    "\n",
+    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "\n",
+    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "\n",
+    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`\n",
     "\n",
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
    ]
@@ -13,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9304c598",
+   "id": "9e51b847",
    "metadata": {
     "hide-output": false
    },
@@ -24,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c2b1fe7",
+   "id": "4865da1f",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -33,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c985d848",
+   "id": "4a081f56",
    "metadata": {
     "hide-output": false
    },
@@ -49,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49671d0e",
+   "id": "cbe192dd",
    "metadata": {},
    "source": [
     "Use 64 bit floats with JAX in order to match NumPy code\n",
@@ -61,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b95194a",
+   "id": "38d6a63b",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc2e3a10",
+   "id": "4ec94a34",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -103,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33ac7366",
+   "id": "5e154e4d",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb636ac2",
+   "id": "54ab327b",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -145,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f245f23",
+   "id": "ef99b965",
    "metadata": {
     "hide-output": false
    },
@@ -158,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b1d4677",
+   "id": "db2ed279",
    "metadata": {
     "hide-output": false
    },
@@ -184,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91fb9be6",
+   "id": "9c4d829f",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcdd62b7",
+   "id": "fb10e64b",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -221,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13c8c25b",
+   "id": "803b7d94",
    "metadata": {
     "hide-output": false
    },
@@ -259,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45ca6240",
+   "id": "db6814e3",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -270,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7bb5a52",
+   "id": "f1695db8",
    "metadata": {
     "hide-output": false
    },
@@ -300,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29ff23e6",
+   "id": "7e6acfb5",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9343e6ef",
+   "id": "e6bfaf12",
    "metadata": {},
    "source": [
     "and the Bellman operator $ T $"
@@ -342,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2db0f8f3",
+   "id": "4684c27a",
    "metadata": {
     "hide-output": false
    },
@@ -355,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd8f0c4a",
+   "id": "cad7ca07",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -364,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c34d0f16",
+   "id": "278ef518",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81f90dd5",
+   "id": "56bb14da",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -416,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "887055f8",
+   "id": "1a812a5b",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32013323",
+   "id": "8c035f23",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b72afced",
+   "id": "b69eec09",
    "metadata": {},
    "source": [
     "## JIT compiled versions"
@@ -493,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5acc1c70",
+   "id": "4613f22d",
    "metadata": {
     "hide-output": false
    },
@@ -510,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f135c5a8",
+   "id": "26ea960f",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -521,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ad1edc6",
+   "id": "b168eff5",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b0cccc8",
+   "id": "647d6c7d",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "579db87a",
+   "id": "4e54bb7c",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aac8dafe",
+   "id": "cc3064f8",
    "metadata": {},
    "source": [
     "## Plots\n",
@@ -599,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6396ec9",
+   "id": "f4e9f614",
    "metadata": {
     "hide-output": false
    },
@@ -623,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07428fc5",
+   "id": "4277ef01",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -634,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0fd08ac",
+   "id": "20b963dc",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c5cb5c7",
+   "id": "7c42b859",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fd4afec",
+   "id": "6a93a8ee",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd357dad",
+   "id": "e44232af",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da0a62ee",
+   "id": "a98f4a7c",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +744,7 @@
   }
  ],
  "metadata": {
-  "date": 1683534859.356912,
+  "date": 1683608798.6171565,
   "filename": "opt_savings.md",
   "kernelspec": {
    "display_name": "Python",
